--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "example-1",
-  "homepage": "https://the-reza.github.io/travel-tour",
+  "homepage": "https://the-reza.github.io/tour",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
